--- a/style.css
+++ b/style.css
@@ -144,7 +144,8 @@ a, button {
 /* SIDE MENU */
 .menu {
 	cursor: pointer;
-	width: 25px;
+	width: 50px;
+	height: 50px;
 	display: none;
 }
 .side-menu {
